[package]
name = "visa-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.35", features = ["full"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "macros", "tls-rustls", "rust_decimal"] }
rust_decimal = { version = "1.33", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["cors"] }
anyhow = "1.0.75"
dotenv = "0.15.0"
# Swagger / OpenAPI
utoipa = { version = "4.2", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "4.0", features = ["axum"] }
